--- a/index.html
+++ b/index.html
@@ -106,10 +106,69 @@
                     </div>
                 </div>
             </div>
-            <div class="col-9"></div>
+            <div class="col-9 ml-auto">
+                <ul class="nav nav-tabs" id="myTab" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="lastNews-tab" data-bs-toggle="tab"
+                            data-bs-target="#lastNews-tab-pane" type="button" role="tab"
+                            aria-controls="lastNews-tab-pane" aria-selected="true">Last News <span class="badge text-bg-primary">4</span></button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="Suport-tab" data-bs-toggle="tab" data-bs-target="#Suport-tab-pane"
+                            type="button" role="tab" aria-controls="Suport-tab-pane"
+                            aria-selected="false">Support</button>
+                    </li>
+                </ul>
+                <div class="tab-content w-100" id="myTabContent">
+                    <div class="tab-pane fade active show" id="lastNews-tab-pane" role="tabpanel"
+                        aria-labelledby="lastNews-tab" tabindex="0">
+                        <div class="list-group">
+                            <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                                <div class="d-flex w-100 justify-content-between">
+                                    <p class="mb-1">Some placeholder content in a paragraph.</p>
+                                    <small>3 days ago</small>
+                                </div>
+                            </a>
+                            <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                                <div class="d-flex w-100 justify-content-between">
+                                    <p class="mb-1">Some placeholder content in a paragraph.</p>
+                                    <small>3 days ago</small>
+                                </div>
+                            </a>
+                            <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                                <div class="d-flex w-100 justify-content-between">
+                                    <p class="mb-1">Some placeholder content in a paragraph.</p>
+                                    <small>3 days ago</small>
+                                </div>
+                            </a>
+                            <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                                <div class="d-flex w-100 justify-content-between">
+                                    <p class="mb-1">Some placeholder content in a paragraph.</p>
+                                    <small>3 days ago</small>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="Suport-tab-pane" role="tabpanel" aria-labelledby="Suport-tab"
+                        tabindex="0"> <h4 class="mt-3">Get In Touch</h4>
+                        <p>Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                        <hr>
+                        mail@server.com
+                        </br>
+                        2121-5652
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+        integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
+        integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
+        crossorigin="anonymous"></script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
