--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- style css -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/dashboard.css">
-    <title>Document - Bootstrap</title>
+    <title>Dashboard | Bootstrap</title>
 </head>
 
 <body>
@@ -20,7 +21,9 @@
         <div class="navbar-nav px-3">
             <a class="navbar-item nav-link py-0 text-nowrap" href="">Sign out</a>
         </div>
-    </header>
+    </header><!-- end /header -->
+
+    <!-- start nav -->
     <nav class="col-2 bg-light sidebar">
         <ul class="nav flex-column">
             <li class="nav-item">
@@ -74,7 +77,9 @@
                 </a>
             </li>
         </ul>
-    </nav>
+    </nav><!-- end /nav -->
+
+    <!-- start main -->
     <main class="col-10 ml-auto px-4" role="main">
         <div class="d-flex justify-content-between align-items-center mt-2 border-bottom pb-2 mb-3">
             <h1 class="h2">Dashboard</h1>
@@ -111,7 +116,8 @@
                     <li class="nav-item" role="presentation">
                         <button class="nav-link active" id="lastNews-tab" data-bs-toggle="tab"
                             data-bs-target="#lastNews-tab-pane" type="button" role="tab"
-                            aria-controls="lastNews-tab-pane" aria-selected="true">Last News <span class="badge text-bg-primary">4</span></button>
+                            aria-controls="lastNews-tab-pane" aria-selected="true">Last News <span
+                                class="badge text-bg-primary">4</span></button>
                     </li>
                     <li class="nav-item" role="presentation">
                         <button class="nav-link" id="Suport-tab" data-bs-toggle="tab" data-bs-target="#Suport-tab-pane"
@@ -150,8 +156,10 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="Suport-tab-pane" role="tabpanel" aria-labelledby="Suport-tab"
-                        tabindex="0"> <h4 class="mt-3">Get In Touch</h4>
-                        <p>Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                        tabindex="0">
+                        <h4 class="mt-3">Get In Touch</h4>
+                        <p>Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius
+                            blandit.</p>
                         <hr>
                         mail@server.com
                         </br>
@@ -159,10 +167,55 @@
                     </div>
                 </div>
             </div>
+
+            <table class="table table-striped table-sm mt-3">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">First</th>
+                        <th scope="col">Last</th>
+                        <th scope="col">Handle</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>@fat</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td colspan="2">Larry the Bird</td>
+                        <td>@twitter</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-    </main>
+        <div aria-label="Page navigation" class="mt-3">
+            <ul class="pagination justify-content-center">
+                <li class="page-item">
+                    <a class="page-link">Previous</a>
+                </li>
+                <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                <li class="page-item" aria-current="page">
+                    <a class="page-link" href="#">2</a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="#">Next</a>
+                </li>
+            </ul>
+        </div>
+    </main> <!-- end /main -->
 
-
+    <!-- script bs -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
         integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
         crossorigin="anonymous"></script>
